--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preload" href="bebas-neue-IXgqs9oC.ttf" as="font" type="font/ttf" crossorigin>
     <title>Билеты на Марс</title>
     <script type="module" crossorigin src="index-dfp9Zi9u.js"></script>
     <link rel="stylesheet" crossorigin href="index-gBTNw7sM.css">
