--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="preload" href="bebas-neue-IXgqs9oC.ttf" as="font" type="font/ttf" crossorigin>
     <title>Билеты на Марс</title>
-    <script type="module" crossorigin src="index-9aauIynK.js"></script>
-    <link rel="stylesheet" crossorigin href="index-igTbRzZQ.css">
+    <script type="module" crossorigin src="index-xfASqpMB.js"></script>
+    <link rel="stylesheet" crossorigin href="index-77gqzi_M.css">
     <script type="module">import.meta.url;import("_").catch(()=>1);(async function*(){})().next();if(location.protocol!="file:"){window.__vite_is_modern_browser=true}</script>
     <script type="module">!function(){if(window.__vite_is_modern_browser)return;console.warn("vite: loading legacy chunks, syntax error above and the same error below should be ignored");var e=document.getElementById("vite-legacy-polyfill"),n=document.createElement("script");n.src=e.src,n.onload=function(){System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))},document.body.appendChild(n)}();</script>
   </head>
@@ -35,15 +35,12 @@
           <li><a class="link" href="#">Новости</a></li>
           <li><a class="link" href="#">Контакты</a></li>
         </ul>
-
         <button class="btn header__btn">Купить билеты</button>
-
         <div class="burger header__burger">
           <div class="burger__left"></div>
           <div class="burger__right"></div>
         </div>
       </header>
-
       <main class="main">
         <div class="main__subtitle">Точка назначения:</div>
         <div class="text-video main__text-video">
@@ -68,7 +65,6 @@
         </div> 
       </main>
     </div>
-
     <div class="service-form">
       <div class="wrapper service-form__wrapper">
         <div class="service-form__head">
@@ -119,7 +115,6 @@
         </div>
       </div>
     </div>
-
     <div class="mobile-menu">
       <div class="wrapper mobile-menu__wrapper">
         <button class="btn-close mobile-menu__btn-close">
@@ -137,10 +132,8 @@
         </ul>
       </div>
     </div>
-
-
     <script nomodule>!function(){var e=document,t=e.createElement("script");if(!("noModule"in t)&&"onbeforeload"in t){var n=!1;e.addEventListener("beforeload",(function(e){if(e.target===t)n=!0;else if(!e.target.hasAttribute("nomodule")||!n)return;e.preventDefault()}),!0),t.type="module",t.src=".",e.head.appendChild(t),t.remove()}}();</script>
     <script nomodule crossorigin id="vite-legacy-polyfill" src="polyfills-legacy-YkIG9een.js"></script>
-    <script nomodule crossorigin id="vite-legacy-entry" data-src="index-legacy-Uw6ozZg9.js">System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))</script>
+    <script nomodule crossorigin id="vite-legacy-entry" data-src="index-legacy-_6ZQsOCS.js">System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))</script>
   </body>
 </html>
